[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/tiles/snake.png" type="Texture" id=1]
[ext_resource path="res://src/snake/Snake.gd" type="Script" id=2]
[ext_resource path="res://src/snake/SnakeIdle.gd" type="Script" id=3]
[ext_resource path="res://src/snake/SnakeWalk.gd" type="Script" id=4]
[ext_resource path="res://src/snake/SnakeFall.gd" type="Script" id=5]
[ext_resource path="res://src/snake/SnakeWarpIn.gd" type="Script" id=6]
[ext_resource path="res://src/snake/SnakeWarpOut.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4, 5 )

[sub_resource type="Animation" id=1]
resource_name = "fall"
length = 0.6
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Rotate/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=2]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rotate/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rotate/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=4]
length = 0.6
loop = true
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Rotate/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 3, 4 )

[node name="Snake" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/walk = SubResource( 3 )
anims/walk_back = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 5 )

[node name="Rotate" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Rotate"]
texture = ExtResource( 1 )
hframes = 6
frame = 3
__meta__ = {
"_edit_lock_": true
}

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="Walk" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Fall" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="WarpIn" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="WarpOut" type="Node" parent="States"]
script = ExtResource( 7 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
